fix(ui5-day-picker): fix color contrast of selected day in HCB (#2378)
FIXES #2372

--- a/packages/main/src/themes/DayPicker.css
+++ b/packages/main/src/themes/DayPicker.css
@@ -133,7 +133,7 @@
 }
 
 .ui5-dp-item.ui5-dp-item--selected.ui5-dp-item--now .ui5-dp-daytext {
-	border: 1px solid var(--sapList_Background);
+	border: 1px solid var(--_ui5_daypicker_item_selected_border_color);
 	border-radius: var(--_ui5_daypicker_item_now_inner_border_radius);
 }
 
